# Tarea-2-Base-de-Datos

./: README.md  alembic.ini  pyproject.toml
app/: __init__.py  config.py  database.py
app/services/: __init__.py
app/services/accounts/: controllers.py  dtos.py  models.py  repositories.py  security.py
app/services/expenses/: controllers.py  dtos.py  models.py  repositories.py
migrations/: env.py
migrations/versions/: 202410291016-2ca0c7119d91_init.py  202410301756-f2d9d455cc8e_optional_expenses_datetime.py  202411141510-765c997b7e24_init.py  202411141511-65f83575ac83_add_last_login_field_to_accounts_users_.py  202411202340-b92ea55992f5_initial_migration.py  202411202345-be1841b7df2c_contrasenasi.py
